--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
     "electron": "^25.0.1"
   },
   "scripts": {
-    "start": "electron .",
-    "test": "node test.js"
+    "start": "electron ."
   }
 }
