--- a/package.json
+++ b/package.json
@@ -16,10 +16,14 @@
   "author": "ILoveAndLikePizza",
   "license": "MIT",
   "dependencies": {
-    "easymidi": "^3.0.1",
-    "electron": "^25.0.1"
+    "easymidi": "^3.1.0"
   },
   "scripts": {
-    "start": "electron ."
+    "start": "electron .",
+    "build": "electron-builder -l"
+  },
+  "devDependencies": {
+    "electron": "^28.2.2",
+    "electron-builder": "^24.9.1"
   }
 }
